--- a/daily-cipher.html
+++ b/daily-cipher.html
@@ -11,10 +11,10 @@
         <p class="update-date">Update On 17 Aug</p>
         <h2>Today's word: ACHV</h2>
         <ul class="morse-code">
-            <li><strong>A:</strong> <span class="morse">• ─</span> (dot dash)</li>
-            <li><strong>C:</strong> <span class="morse">─ • ─ •</span> (dash dot dash dot)</li>
-            <li><strong>H:</strong> <span class="morse">• • • •</span> (dot dot dot dot)</li>
-            <li><strong>V:</strong> <span class="morse">• • • ─</span> (dot dot dot dash)</li>
+            <li><strong>a:</strong> <span class="morse">• ─</span> (dot dash)</li>
+            <li><strong>c:</strong> <span class="morse">─ • ─ •</span> (dash dot dash dot)</li>
+            <li><strong>h:</strong> <span class="morse">• • • •</span> (dot dot dot dot)</li>
+            <li><strong>v:</strong> <span class="morse">• • • ─</span> (dot dot dot dash)</li>
         </ul>
     </div>
 </body>
