--- a/daily-cipher.html
+++ b/daily-cipher.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="content">
-        <p class="update-date">Update On 17 Aug</p>
+        <p class="update-date">Update On 17 Aug 20:48</p>
         <h2>Today's word: ACHV</h2>
         <ul class="morse-code">
             <li><strong>a:</strong> <span class="morse">• ─</span> (dot dash)</li>
