--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1> 🐿️ Hamster Kombat All In One Tools</h1>
     <div class="container">
-         <p class="update-date">Update On 17 Aug</p>
+         <p class="update-date">Update On 17 Aug 20:48</p>
         
         
         <div class="option" onclick="window.location.href='daily-cipher.html'">
