--- a/mini-game.html
+++ b/mini-game.html
@@ -9,7 +9,11 @@
 <body>
        <p class="update-date">Update On 17 Aug</p>
     <h1> MiniGame</h1>
-   <img src="pic_trulli.jpg" alt="Italian Trulli">
+   
+<iframe width="420" height="315"
+src="https://www.youtube.com/watch?v=TDywBozKZMM&embeds_referring_euri=https%3A%2F%2Fhindijankaripur.com%2F&source_ve_path=Mjg2NjY">
+</iframe>
 
+</video>
 </body>
 </html>
