--- a/mini-game.html
+++ b/mini-game.html
@@ -11,7 +11,7 @@
     <h1> MiniGame</h1>
    
 <iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=TDywBozKZMM&embeds_referring_euri=https%3A%2F%2Fhindijankaripur.com%2F&source_ve_path=Mjg2NjY">
+src="https://m.youtube.com/watch?v=TDywBozKZMM">
 </iframe>
 
 </video>
