--- a/mini-game.html
+++ b/mini-game.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="minigame.css">
 </head>
 <body>
-       <p class="update-date">Update On 17 Aug</p>
+       <p class="update-date">Update On 17 Aug 22:38</p>
     <h1> MiniGame</h1>
    
 <iframe width="420" height="315"
