--- a/mini-game.html
+++ b/mini-game.html
@@ -11,7 +11,7 @@
     <h1> MiniGame</h1>
    
 <iframe width="420" height="315"
-src="https://m.youtube.com/watch?v=TDywBozKZMM">
+src="https://youtu.be/TDywBozKZMM?si=tf-JCnhbn6rJyUp7">
 </iframe>
 
 </video>
