--- a/mini-game.html
+++ b/mini-game.html
@@ -10,10 +10,10 @@
        <p class="update-date">Update On 17 Aug 22:38</p>
     <h1> MiniGame</h1>
    
-<iframe width="420" height="315"
-src="https://youtu.be/TDywBozKZMM?si=tf-JCnhbn6rJyUp7">
-</iframe>
 
-</video>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Dt97fesKfYk?si=4RpRlUp4-HeMxXtP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+
 </body>
 </html>
