--- a/daily-cipher.html
+++ b/daily-cipher.html
@@ -8,10 +8,14 @@
 </head>
 <body>
     <div class="content">
-        <p class="update-date">Update On 17 Aug 20:48</p>
-        <h2>Today's word: ACHV</h2>
+        <p class="update-date">Update On 18 Aug 09:18</p>
+        <h2>Today's word: TELEGRAM</h2>
+
         <ul class="morse-code">
-            <li><strong>a:</strong> <span class="morse">• ─</span> (dot dash)</li>
+            <li><strong>T:</strong> <span
+
+ class="morse">• ─</span> (dot dash)</li>
+
             <li><strong>c:</strong> <span class="morse">─ • ─ •</span> (dash dot dash dot)</li>
             <li><strong>h:</strong> <span class="morse">• • • •</span> (dot dot dot dot)</li>
             <li><strong>v:</strong> <span class="morse">• • • ─</span> (dot dot dot dash)</li>
