--- a/mini-game.html
+++ b/mini-game.html
@@ -9,9 +9,10 @@
 <body>
        <p class="update-date">Update On 17 Aug 22:51</p>
     <h1> MiniGame</h1>
+    <h1> Coming Soon</h1>
    
 
-<iframe width="320" height="315" src="https://www.youtube.com/embed/Dt97fesKfYk?si=4RpRlUp4-HeMxXtP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<!--<iframe width="320" height="315" src="https://www.youtube.com/embed/Dt97fesKfYk?si=4RpRlUp4-HeMxXtP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>-->
 
 
 
