--- a/daily-game-promo.html
+++ b/daily-game-promo.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Game Promo Code Generator</h1>
+        <h1>Hamster key Code Generator</h1>
         <div class="form-group">
            <label for="gameSelect" style="color: white;">Select Game</label>    
             <select id="gameSelect">
@@ -29,7 +29,7 @@
                 <option value="3">3</option>
                 <option value="4">4</option>
                 <option value="8">8</option>
-                
+                             <option value="50">50</option>
             </select>
         </div>
         <button id="startBtn">Generate Keys</button>
