--- a/daily-cipher.html
+++ b/daily-cipher.html
@@ -9,7 +9,7 @@
 <body>
     <div class="content">
         <p class="update-date">Update On 18 Aug 09:18</p>
-        <h2>Today's word: TELEGRAM</h2>
+        <h2>Today's word: ahad neta</h2>
 
         <ul class="morse-code">
             <li><strong>T:</strong> <span
